# mogle

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  mogle.db  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 99decbca5f8a_create_accounts_table.py  e0ee2439dd4b_create_users_table.py
app/core/: database.py  security.py
app/models/: __init__.py  account.py  user.py
app/schemas/: account.py  user.py
